--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 title: georgerou
+#logo
 description: This page serves as my personal portfolio, showcasing my journey, skills, and achievements. Here, you’ll find information about my background, contact details, education, CV, and the projects I’ve worked on.
+#show_downloads:true
 remote_theme: pages-themes/tactile@v0.2.0
 plugins:
   - jekyll-remote-theme
