--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,8 @@ description: This page serves as my personal portfolio, showcasing my journey, s
 remote_theme: pages-themes/tactile@v0.2.0
 plugins:
   - jekyll-remote-theme
-  - jekyll-assets
+
+# Custom CSS injection
+custom_css: assets/css/style.css
+
 
