--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,5 @@
 #logo
 description: This page serves as my personal portfolio, showcasing my journey, skills, and achievements. Here, you’ll find information about my background, contact details, education, CV, and the projects I’ve worked on.
 #show_downloads:true
-remote_theme: pages-themes/midnight@v0.2.0
-plugins:
-- jekyll-remote-theme
+remote_theme: "dracula/gh-pages"
 
