--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
- title: georgerou
+title: Portfolio
 #logo
 description: [This page serves as my personal portfolio, showcasing my journey, skills, and achievements. Here, you’ll find information about my background, contact details, education, CV, and the projects I’ve worked on.]
 #show_downloads:true
