--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,7 @@ description: [This page serves as my personal portfolio, showcasing my journey, 
 #show_downloads:true
 remote_theme: "dracula/gh-pages"
 
+# Custom styles
+sass:
+  load_paths:
+    - assets/css
