--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,5 @@
-title: Portfolio
+Portfolio
 #logo
-description: [This page serves as my personal portfolio , showcasing my journey , skills, and achievements. Here, you’ll find information about my background, contact details, education, CV, and the projects I’ve worked on.]
+description: [This page serves as my personal portfolio, showcasing my journey, skills, and achievements. Here, you’ll find information about my background, contact details, education, CV, and the projects I’ve worked on.]
 #show_downloads:true
 remote_theme: "dracula/gh-pages"
-# Custom styles
-sass:
-  load_paths:
-    - assets/css
