--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ title: Portfolio
 #logo
 description: [This page serves as my personal portfolio, showcasing my journey skills and achievements. Here, you’ll find information about my background, contact details, education, CV, and the projects I’ve worked on.]
 #show_downloads:true
-custom_font: "'Consolas', monospace" # Front matter variable for font
 remote_theme: "dracula/gh-pages"
-
+custom_font: "'Consolas', monospace" # Front matter variable for font
+layout: default
